--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,18 @@
-<h1>{{title}}</h1>
+<style>
+    .markdown-body {
+        box-sizing: border-box;
+        min-width: 200px;
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 45px;
+    }
+    @media (max-width: 767px) {
+        .markdown-body {
+            padding: 15px;
+        }
+    }
+</style>
+<div class="markdown-body">
 {{{mdHTML}}}
+</div>
 
