--- a/views/partials/mdStylesheets.handlebars
+++ b/views/partials/mdStylesheets.handlebars
@@ -4,3 +4,6 @@
 <link rel='stylesheet' href='/stylesheets/codebg.css' />
 <link rel='stylesheet' href='{{highlightStyle}}' />
 {{/if}}
+{{#if pageStyle}}
+<link rel='stylesheet' href='/stylesheets/{{pageStyle}}' />
+{{/if}}
