--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,32 @@
 <div class="markdown-body">
+    <div id ="nav" style="float:right;">
+    <a id='copy' href="#" data-clipboard-text='{{mdFileURL}}'>Copy URL</a><br>
+    <a href="{{mdFileURL}}" download target="_blank">Download .md</a>
+    </div>
     {{{mdHTML}}}
 </div>
+<!-- clipboard.js -->
+<script src="/clipboard/clipboard.min.js"></script>
+<script>
+    //set data-clipboard-text to full window URL (file prepended with app URL) for sharing
+    document.querySelector('#copy').setAttribute('data-clipboard-text', window.location.href);
+    //init Clipboard.js
+    var clipboard = new ClipboardJS('#copy');
+    //copy success
+    clipboard.on('success', function (e) {
+        //create success feedback element
+        let feedbackEl = document.createElement('div');
+        feedbackEl.innerHTML=`<p id='feedbackEl' style='position: absolute; top:1em; float:right; text-align:center; margin: '0 auto';'>url copied</p>`;
+        //add feedback element to page
+        document.querySelector('.markdown-body').prepend(feedbackEl);
+        //remove feedback element from page after time delay
+        setTimeout(()=>{
+            document.querySelector('#feedbackEl').remove();
+        },2000);
+        console.log();
+    });
+    //copy error
+    clipboard.on('error', function (e) {
+        console.log(e);
+    });
+</script>
