--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="markdown-body">
-    <div id ="nav" style="float:right;">
-    <a id='copy' href="#" data-clipboard-text='{{mdFileURL}}'>Copy URL</a><br>
-    <a href="{{mdFileURL}}" download target="_blank">Download .md</a>
+    <div id="navContainer">
+    <a class='nav' id='copy' href="#" data-clipboard-text='{{mdFileURL}}'>Copy URL</a><br>
+    <a class='nav' href="{{mdFileURL}}" download target="_blank">Download .md</a>
     </div>
     {{{mdHTML}}}
 </div>
