fix feedback el removal

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
         },2000);
         //remove feedback element from page after time delay
         setTimeout(()=>{
-            document.querySelector('#feedbackEl').style.opacity = '0';
+            document.querySelector('#feedbackEl').remove();
         },3000);
     });
     //copy error
