--- a/src/functions/server/views/index.handlebars
+++ b/src/functions/server/views/index.handlebars
@@ -6,7 +6,7 @@
     {{{mdHTML}}}
 </div>
 <!-- clipboard.js -->
-<script src='/clipboard/clipboard.min.js'></script>
+<script src='/node_modules/clipboard/dist/clipboard.min.js'></script>
 <script>
     //this should be moved to a .js file but for now its here. 
     //set data-clipboard-text in #copy element to full window URL (file prepended with app URL) for sharing
