--- a/src/functions/server/views/partials/mdStylesheets.handlebars
+++ b/src/functions/server/views/partials/mdStylesheets.handlebars
@@ -1,9 +1,9 @@
-<link rel='stylesheet' href='/src/stylesheets/style.css' />
+<link rel='stylesheet' href='/stylesheets/style.css' />
 <link rel='stylesheet' href='/node_modules/github-markdown-css/github-markdown.css' />
 {{#if highlightStyle}}
-<link rel='stylesheet' href='/src/stylesheets/codebg.css' />
+<link rel='stylesheet' href='/stylesheets/codebg.css' />
 <link rel='stylesheet' href='/node_modules/{{highlightStyle}}' />
 {{/if}}
 {{#if pageStyle}}
-<link rel='stylesheet' href='/src/stylesheets/form-reset.css' />
+<link rel='stylesheet' href='/stylesheets/form-reset.css' />
 {{/if}}
