--- a/src/functions/server/views/index.handlebars
+++ b/src/functions/server/views/index.handlebars
@@ -1,3 +1,4 @@
+<!-- markdown content -->
 <div class='markdown-body'>
     <div id='navContainer'>
     <a class='nav' id='copy' href='#' data-clipboard-text='{{mdFileURL}}'>Copy URL</a><br>
