--- a/src/functions/server/views/partials/mdStylesheets.handlebars
+++ b/src/functions/server/views/partials/mdStylesheets.handlebars
@@ -1,3 +1,4 @@
+<!-- stylesheets -->
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <link rel='stylesheet' href='/node_modules/github-markdown-css/github-markdown.css' />
 {{#if highlightStyle}}
