update dependency urls

--- a/src/functions/server/views/partials/mdStylesheets.handlebars
+++ b/src/functions/server/views/partials/mdStylesheets.handlebars
@@ -1,9 +1,9 @@
 <!-- stylesheets -->
 <link rel='stylesheet' href='/stylesheets/style.css' />
-<link rel='stylesheet' href='/node_modules/github-markdown-css/github-markdown.css' />
+<link rel='stylesheet' href='/github-markdown-css/github-markdown.css' />
 {{#if highlightStyle}}
 <link rel='stylesheet' href='/stylesheets/codebg.css' />
-<link rel='stylesheet' href='/node_modules/{{highlightStyle}}' />
+<link rel='stylesheet' href='/{{highlightStyle}}' />
 {{/if}}
 {{#if pageStyle}}
 <link rel='stylesheet' href='/stylesheets/form-reset.css' />
